  - why bother no media data has been written anyway
* EWF2 can handle more then UINT16_MAX segment files - add support for this?
  - having more than 65000 segment files is a bit overkill,
    also the naming schema does not support this without creating odd names
    for now not adding support for this, unless there is a good reason to do so

20141226
* changes for updated dependencies

20141225
* worked on Python 3 support

20141210
* fix in spec file for zlib-static

20141204
* small changes in progress status output
* moved chunk groups cache into handle
* moved libewf_chunk_table_chunk_exists_for_offset out of write-only code path

20141201
* code clean up
* removed unrestrict_offset_table, added maximum of 128 M to size of offset table
* removed ewf_definitions.h

20141129
* code clean up

20141102
* bug fixes
* ewf.net added FileEntry::GetType

20141030
* bug fix in Python-bindings
* changes for updated dependencies

20141021
* changes for deployment

20141012
* bug fixes

20141007
* updated dependencies and corresponding changes
* worked on autogen.sh and synclibs.sh scripts

20141002
* removed README.macosx
* changes for project site move

20140801
* bug fix in Python-bindings

20140608
* worked on tests
* updated msvscpp files
* bug fix for utf16 header functions

20140602
* bug fix in ewfmount regarding logical files date and time values
* fix for Lx01 files, device information section needs to be read before the
  sector table section to determine the chunk size

20140601
* updated dependencies
* deprecated random functions
* worked on Python bindings
* worked on tests
* worked on EWF2 refactor

20140424
* fixes to build static library with mingw and cygwin

20140406
* bug fixes in m4 files
* worked on Python bindings

20140216
* bug fix in recent process status changes

20140201
* updated libcdatetime

20140126
* fixed multi file caching bug in libfdata

20140119
* 2014 update
* updated dependencies
* added libcdatetime