@@ -37,14 +37,15 @@ SUBDIRS = \
 DPKG_FILES = \
 	dpkg/changelog \
 	dpkg/changelog.in \
-       	dpkg/compat \
-       	dpkg/control \
-       	dpkg/copyright \
-       	dpkg/copyright.in \
-       	dpkg/rules \
-       	dpkg/libewf-dev.docs \
-       	dpkg/libewf.docs \
-       	dpkg/libewf-tools.docs
+	dpkg/compat \
+	dpkg/control \
+	dpkg/copyright \
+	dpkg/copyright.in \
+	dpkg/rules \
+	dpkg/libewf-dev.docs \
+	dpkg/libewf.docs \
+	dpkg/libewf-tools.docs \
+	dpkg/source/format
 
 GETTEXT_FILES = \
 	config.rpath \
