@@ -81,7 +81,7 @@ override_dh_perl:
 override_dh_pysupport:
 
 override_dh_shlibdeps:
-	dh_shlibdeps -Llibewf -l${PWD}/debian/tmp/usr/lib
+	dh_shlibdeps -Llibewf -l${CURDIR}/debian/tmp/usr/lib
 
 override_dh_makeshlibs:
 	dh_makeshlibs -Xlibewf-dev
