@@ -451,6 +451,11 @@ Closed:
     also the naming schema does not support this without creating odd names
     for now not adding support for this, unless there is a good reason to do so
 
+20141229
+* updated dpkg files
+* updated dependencies
+* updated .gitignore
+
 20141226
 * changes for updated dependencies
 
